--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,44 @@
-### IntelliJ IDEA ###
+# ============================
+# IntelliJ IDEA
+# ============================
+.idea/
+*.iml
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+shelf/
+workspace.xml
+httpRequests/
+dataSources/
+dataSources.local.xml
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# ============================
+# Java / Compilación
+# ============================
+*.class
+*.jar
+*.war
+*.ear
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# ============================
+# Maven
+# ============================
+target/
 
-### VS Code ###
-.vscode/
+# ============================
+# Gradle
+# ============================
+.gradle/
+build/
 
-### Mac OS ###
+# ============================
+# Logs y temporales
+# ============================
+*.log
+*.tmp
+*.swp
+*.bak
+
+# ============================
+# Sistema operativo
+# ============================
 .DS_Store
+Thumbs.db
